--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+:root {
+  --midpoint : 49.7vw;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  font-family: 'Poppins', 'sans-serif';
+}
+
+/*  */
+
+header {
+  border: solid black 1px;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  border: solid green 2px;
+  height:90vh;
+  width: auto;
+  text-align: center;
+}
+
+/* ELEMENTS COMPONENT */
+/* #region */
+#elementview {
+  border: solid yellow 3px;
+  width: var(--midpoint);
+}
+/* #endregion */
+
+#viewer {
+  border: solid orange 3px;
+  width: var(--midpoint);
+}
+
+footer {
+  border: solid red 1px;
+  text-align: center;
+}
+
+
+
